initial logic by defining a few vars and html tags for the trivia game

--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
 
 </head>
 <body>
-    
+    <h1>Totally Trivial Trivia!</h1>
+    <h2 id="startGame">Start</h2>
 
+    <h3 id="timeRemaining">Time remaining: </h3>
+
+    <h3 id = "allDone"></h3>
+    <h4 id="correctAnswer"></h4>
+    <h4 id="incorrectAnswer"></h4>
+    <h4 id="unAnswered"></h4>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
