adding radio buttons bootstrap logic to the index.html file

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,16 +10,296 @@
     <link rel='stylesheet' href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
 </head>
+
 <body>
     <h1>Totally Trivial Trivia!</h1>
     <h2 id="startGame">Start</h2>
 
     <h3 id="timeRemaining">Time remaining: </h3>
 
-    <h3 id = "allDone"></h3>
+    <h3 id="allDone"></h3>
     <h4 id="correctAnswer"></h4>
     <h4 id="incorrectAnswer"></h4>
     <h4 id="unAnswered"></h4>
+
+    <!DOCTYPE html>
+    <html lang="en">
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Trivia Game</title>
+        <!-- Bootstrap CDN -->
+        <link rel='stylesheet' href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+
+    </head>
+
+    <body>
+        <h1>Totally Trivial Trivia!</h1>
+        <h2 id="startGame">Start</h2>
+
+        <h3 id="timeRemaining">Time remaining: </h3>
+
+        <h3 id="allDone"></h3>
+        <h4 id="correctAnswer"></h4>
+        <h4 id="incorrectAnswer"></h4>
+        <h4 id="unAnswered"></h4>
+        <div class="container1">
+
+            <h1>Are you sure, you want to close?</h1>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios1" value="Yes">
+                Yes
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios2" value="No">
+                No
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios3" value="Notsure">
+                Not sure
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios4" value="Notsure">
+                Not sure
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios5" value="Notsure">
+                Not sure
+            </label>
+        </div>
+
+        <div class="container2">
+
+            <h1>Are you sure, you want to close?</h1>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios1" value="Yes">
+                Yes
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios2" value="No">
+                No
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios3" value="Notsure">
+                Not sure
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios4" value="Notsure">
+                Not sure
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios5" value="Notsure">
+                Not sure
+            </label>
+        </div>
+        <div class="container3">
+
+            <h1>Are you sure, you want to close?</h1>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios1" value="Yes">
+                Yes
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios2" value="No">
+                No
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios3" value="Notsure">
+                Not sure
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios4" value="Notsure">
+                Not sure
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios5" value="Notsure">
+                Not sure
+            </label>
+        </div>
+        <div class="container4">
+
+            <h1>Are you sure, you want to close?</h1>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios1" value="Yes">
+                Yes
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios2" value="No">
+                No
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios3" value="Notsure">
+                Not sure
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios4" value="Notsure">
+                Not sure
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios5" value="Notsure">
+                Not sure
+            </label>
+        </div>
+        <div class="container5">
+
+            <h1>Are you sure, you want to close?</h1>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios1" value="Yes">
+                Yes
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios2" value="No">
+                No
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios3" value="Notsure">
+                Not sure
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios4" value="Notsure">
+                Not sure
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios5" value="Notsure">
+                Not sure
+            </label>
+        </div>
+        <div class="container6">
+
+            <h1>Are you sure, you want to close?</h1>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios1" value="Yes">
+                Yes
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios2" value="No">
+                No
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios3" value="Notsure">
+                Not sure
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios4" value="Notsure">
+                Not sure
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios5" value="Notsure">
+                Not sure
+            </label>
+        </div>
+        <div class="container7">
+
+            <h1>Are you sure, you want to close?</h1>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios1" value="Yes">
+                Yes
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios2" value="No">
+                No
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios3" value="Notsure">
+                Not sure
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios4" value="Notsure">
+                Not sure
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios5" value="Notsure">
+                Not sure
+            </label>
+        </div>
+        <div class="container8">
+
+            <h1>Are you sure, you want to close?</h1>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios1" value="Yes">
+                Yes
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios2" value="No">
+                No
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios3" value="Notsure">
+                Not sure
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios4" value="Notsure">
+                Not sure
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios5" value="Notsure">
+                Not sure
+            </label>
+        </div>
+        <div class="container9">
+
+            <h1>Are you sure, you want to close?</h1>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios1" value="Yes">
+                Yes
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios2" value="No">
+                No
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios3" value="Notsure">
+                Not sure
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios4" value="Notsure">
+                Not sure
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios5" value="Notsure">
+                Not sure
+            </label>
+        </div>
+        <div class="container10">
+
+            <h1>Are you sure, you want to close?</h1>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios1" value="Yes">
+                Yes
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios2" value="No">
+                No
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios3" value="Notsure">
+                Not sure
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios4" value="Notsure">
+                Not sure
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="answer" id="Radios5" value="Notsure">
+                Not sure
+            </label>
+        </div>
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
+    </body>
+    <script src="assets/javascript/app.js"></script>
+
+    </html>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -31,5 +312,6 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 </body>
-    <script src = "assets/javascript/app.js"></script>
+<script src="assets/javascript/app.js"></script>
+
 </html>
