--- a/index.html
+++ b/index.html
@@ -47,243 +47,206 @@
         <h4 id="unAnswered"></h4>
         <div class="container1">
 
-            <h1>Are you sure, you want to close?</h1>
+            <h2>Superman makes his first appearance in "Action Comics" #1, Vol. 1. What is the cover date (month and
+                year)?</h2>
             <label class="radio-inline">
                 <input type="radio" name="answer" id="Radios1" value="Yes">
-                Yes
+                1937
             </label>
             <label class="radio-inline">
                 <input type="radio" name="answer" id="Radios2" value="No">
-                No
+                1939
             </label>
             <label class="radio-inline">
                 <input type="radio" name="answer" id="Radios3" value="Notsure">
-                Not sure
+                1938
             </label>
             <label class="radio-inline">
                 <input type="radio" name="answer" id="Radios4" value="Notsure">
-                Not sure
-            </label>
-            <label class="radio-inline">
-                <input type="radio" name="answer" id="Radios5" value="Notsure">
-                Not sure
+                1940
             </label>
         </div>
 
         <div class="container2">
 
-            <h1>Are you sure, you want to close?</h1>
+            <h2>Created in 1968, Carol Danvers has undergone numerous code name changes during her publication history.
+                Which of the follow is NOT a name she has employed?</h2>
             <label class="radio-inline">
                 <input type="radio" name="answer" id="Radios1" value="Yes">
-                Yes
+                Warbird
             </label>
             <label class="radio-inline">
                 <input type="radio" name="answer" id="Radios2" value="No">
-                No
+                Binary
             </label>
             <label class="radio-inline">
                 <input type="radio" name="answer" id="Radios3" value="Notsure">
-                Not sure
+                Captain Marvel
             </label>
             <label class="radio-inline">
                 <input type="radio" name="answer" id="Radios4" value="Notsure">
-                Not sure
-            </label>
-            <label class="radio-inline">
-                <input type="radio" name="answer" id="Radios5" value="Notsure">
-                Not sure
+                Photon
             </label>
         </div>
         <div class="container3">
 
-            <h1>Are you sure, you want to close?</h1>
+            <h2>In addition to Hal Jordan and Alan Scott, The Green Lantern also uses which name as a secret identity?
+            </h2>
             <label class="radio-inline">
                 <input type="radio" name="answer" id="Radios1" value="Yes">
-                Yes
+                Kyle Rayner
             </label>
             <label class="radio-inline">
                 <input type="radio" name="answer" id="Radios2" value="No">
-                No
+                Barry Allen
             </label>
             <label class="radio-inline">
                 <input type="radio" name="answer" id="Radios3" value="Notsure">
-                Not sure
+                Britt Reid
             </label>
             <label class="radio-inline">
                 <input type="radio" name="answer" id="Radios4" value="Notsure">
-                Not sure
-            </label>
-            <label class="radio-inline">
-                <input type="radio" name="answer" id="Radios5" value="Notsure">
-                Not sure
+                Ryan Reynolds
             </label>
         </div>
         <div class="container4">
 
-            <h1>Are you sure, you want to close?</h1>
+            <h2>With the special memory fibre in his cape, Batman is able to …</h2>
             <label class="radio-inline">
                 <input type="radio" name="answer" id="Radios1" value="Yes">
-                Yes
+                Communicate with Batmobile
             </label>
             <label class="radio-inline">
                 <input type="radio" name="answer" id="Radios2" value="No">
-                No
+                Slowly Fall
             </label>
             <label class="radio-inline">
                 <input type="radio" name="answer" id="Radios3" value="Notsure">
-                Not sure
+                Use as a shield
             </label>
             <label class="radio-inline">
                 <input type="radio" name="answer" id="Radios4" value="Notsure">
-                Not sure
-            </label>
-            <label class="radio-inline">
-                <input type="radio" name="answer" id="Radios5" value="Notsure">
-                Not sure
+                Cloak himself
             </label>
         </div>
         <div class="container5">
 
-            <h1>Are you sure, you want to close?</h1>
+            <h2>Doom, the enemy of Fantastic Four, stole the Power Cosmic from which villain?</h2>
             <label class="radio-inline">
                 <input type="radio" name="answer" id="Radios1" value="Yes">
-                Yes
+                Count Abyss
             </label>
             <label class="radio-inline">
                 <input type="radio" name="answer" id="Radios2" value="No">
-                No
+                Galactus
             </label>
             <label class="radio-inline">
                 <input type="radio" name="answer" id="Radios3" value="Notsure">
-                Not sure
+                Living Monolith
             </label>
             <label class="radio-inline">
                 <input type="radio" name="answer" id="Radios4" value="Notsure">
-                Not sure
-            </label>
-            <label class="radio-inline">
-                <input type="radio" name="answer" id="Radios5" value="Notsure">
-                Not sure
+                Silver Surfer
             </label>
         </div>
         <div class="container6">
 
-            <h1>Are you sure, you want to close?</h1>
+            <h2>What are the claws of Wolverine made of?</h2>
             <label class="radio-inline">
                 <input type="radio" name="answer" id="Radios1" value="Yes">
-                Yes
+                Cadmium
             </label>
             <label class="radio-inline">
                 <input type="radio" name="answer" id="Radios2" value="No">
-                No
+                Adamantium
             </label>
             <label class="radio-inline">
                 <input type="radio" name="answer" id="Radios3" value="Notsure">
-                Not sure
+                Titanium
             </label>
             <label class="radio-inline">
                 <input type="radio" name="answer" id="Radios4" value="Notsure">
-                Not sure
-            </label>
-            <label class="radio-inline">
-                <input type="radio" name="answer" id="Radios5" value="Notsure">
-                Not sure
+                Plastic
             </label>
         </div>
         <div class="container7">
 
-            <h1>Are you sure, you want to close?</h1>
+            <h2>Debuting in 1965, which superhero is also known as Goliath and Ronin?</h2>
             <label class="radio-inline">
                 <input type="radio" name="answer" id="Radios1" value="Yes">
-                Yes
+                Hawkeye
             </label>
             <label class="radio-inline">
                 <input type="radio" name="answer" id="Radios2" value="No">
-                No
+                The Beast
             </label>
             <label class="radio-inline">
                 <input type="radio" name="answer" id="Radios3" value="Notsure">
-                Not sure
+                Iron Man
             </label>
             <label class="radio-inline">
                 <input type="radio" name="answer" id="Radios4" value="Notsure">
-                Not sure
-            </label>
-            <label class="radio-inline">
-                <input type="radio" name="answer" id="Radios5" value="Notsure">
-                Not sure
+                Green Arrow
             </label>
         </div>
         <div class="container8">
 
-            <h1>Are you sure, you want to close?</h1>
+            <h2>Which of the following superhero can manipulate and resist the weather?</h2>
             <label class="radio-inline">
                 <input type="radio" name="answer" id="Radios1" value="Yes">
-                Yes
+                Red Tornado
             </label>
             <label class="radio-inline">
                 <input type="radio" name="answer" id="Radios2" value="No">
-                No
+                The Atom
             </label>
             <label class="radio-inline">
                 <input type="radio" name="answer" id="Radios3" value="Notsure">
-                Not sure
+                Storm
             </label>
             <label class="radio-inline">
                 <input type="radio" name="answer" id="Radios4" value="Notsure">
-                Not sure
-            </label>
-            <label class="radio-inline">
-                <input type="radio" name="answer" id="Radios5" value="Notsure">
-                Not sure
+                Captain Planet
             </label>
         </div>
         <div class="container9">
 
-            <h1>Are you sure, you want to close?</h1>
+            <h2>What villain got his distinctive appearance from toxic chemicals at a plant??</h2>
             <label class="radio-inline">
                 <input type="radio" name="answer" id="Radios1" value="Yes">
-                Yes
+                Joker
             </label>
             <label class="radio-inline">
                 <input type="radio" name="answer" id="Radios2" value="No">
-                No
+                Doomsday
             </label>
             <label class="radio-inline">
                 <input type="radio" name="answer" id="Radios3" value="Notsure">
-                Not sure
+                Green Goblin
             </label>
             <label class="radio-inline">
                 <input type="radio" name="answer" id="Radios4" value="Notsure">
-                Not sure
-            </label>
-            <label class="radio-inline">
-                <input type="radio" name="answer" id="Radios5" value="Notsure">
-                Not sure
+                Two-Face
             </label>
         </div>
         <div class="container10">
 
-            <h1>Are you sure, you want to close?</h1>
+            <h2>Which superhero cannot transform back into the human form anymore?</h2>
             <label class="radio-inline">
                 <input type="radio" name="answer" id="Radios1" value="Yes">
-                Yes
+                The Incredible Hulk
             </label>
             <label class="radio-inline">
                 <input type="radio" name="answer" id="Radios2" value="No">
-                No
+                Jacob
             </label>
             <label class="radio-inline">
                 <input type="radio" name="answer" id="Radios3" value="Notsure">
-                Not sure
+                Cyclops
             </label>
             <label class="radio-inline">
                 <input type="radio" name="answer" id="Radios4" value="Notsure">
-                Not sure
-            </label>
-            <label class="radio-inline">
-                <input type="radio" name="answer" id="Radios5" value="Notsure">
-                Not sure
+                The Thing
             </label>
         </div>
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
