readME file changes, updates to homework files including css

--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     <link rel='stylesheet' href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<!-- defining on load of the page start the testTimer function from app.js file -->
-
-<body onload="testTimer()" background="assets/images/backgroundImage2.jpeg">
+<!-- defining on load of the page start the setTimer function from app.js file -->
+<body onload="setTimer()" background="assets/images/backgroundImage2.jpeg">
 
     <div class="container">
         <div class="card border-0 shadow my-5">
