updating file name and removing additionally created dirs to see if that would solve the issue with git hub pages

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="card-body p-5">
                 <h1 class="display-4">Totally Trivial Trivia!</h1>
                 <br>
-                <h1 id="startGame"><a href="index.html" class="btn btn-primary">Start</a></h1>
+                <h1 id="startGame"><a href="triviaQuiz.html" class="btn btn-primary">Start</a></h1>
                 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
                 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
                     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
